grammar.js
      source_file: ($) => repeat($._expression),

      _expression: ($) =>
        choice(
          $._leaf,
          $.prefix,
          $.postfix,
          $.binary,
          $.infix,
          $.call,
          $.part,
          $.span,
          $.pattern,
          $.message_name,
          $.freeform_evaluate,
          $.group,
        ),

      symbol: ($) => token(seq(optional("`"), repeat(seq(SYMBOL_NAME, "`")), SYMBOL_NAME)),

      integer: ($) => /([0-9]+\^\^[0-9a-zA-Z]+|[0-9]+)`{0,2}[0-9]*(\*\^-?[0-9]+)?/,

      real: ($) => /(([0-9]+\^\^)([0-9a-zA-Z]+\.[0-9a-zA-Z]*|\.[0-9a-zA-Z]+)|[0-9]+\.[0-9]*|\.[0-9]+)`{0,2}[0-9]*(\*\^-?[0-9]+)?/,

      string: ($) => /\"([^\"\\]|\\(.|\n))*\"/,

      // ## or ##n — SlotSequence
      blank: ($) =>
        prec.left(PRECEDENCE_UNDER, seq(
          "_",
          optional(token.immediate(/[a-zA-Z][a-zA-Z0-9$]*/)),
        )),

      // _. — Optional with built-in default: Optional[Blank[]]
      blank_sequence: ($) =>
        prec.left(PRECEDENCE_UNDER, seq(
          "__",
          optional(token.immediate(/[a-zA-Z][a-zA-Z0-9$]*/)),
        )),

      // ___ with optional head: ___, ___Integer
      blank_null_sequence: ($) =>
        prec.left(PRECEDENCE_UNDER, seq(
          "___",
          optional(token.immediate(/[a-zA-Z][a-zA-Z0-9$]*/)),
        )),

      // x_ is Pattern[x, Blank[]], x_Integer is Pattern[x, Blank[Integer]]
      pattern: ($) =>
        prec(PRECEDENCE_UNDER, seq(
          field("name", $.symbol),
          field("constraint", choice($.blank, $.blank_default, $.blank_sequence, $.blank_null_sequence)),
        )),

      // f::name is MessageName[f, "name"], f::name::lang is MessageName[f, "name", "lang"]
      // The tags after :: are unquoted strings, not symbols
      message_name: ($) =>
        prec.left(PRECEDENCE_COLONCOLON, seq(
          $._expression,
          "::",
          alias(token.immediate(SYMBOL_NAME), $.message_tag),
          optional(seq(
            token.immediate("::"),
            alias(token.immediate(SYMBOL_NAME), $.message_tag),
          )),
        )),

      // =[content] is FreeformEvaluate["content"]
      // The content between [ and ] is raw text, not parsed as expressions
      freeform_evaluate: ($) =>
        seq(
          token(seq("=", "[")),
          optional(alias(/[^\]]+/, $.freeform_content)),
          "]",
        ),

      prefix: ($) =>
        choice(
          prec(PRECEDENCE_PREFIX_BANG, seq("!", $._expression)),
          prec(PRECEDENCE_FAKE_PREFIX_BANGBANG, seq("!!", $._expression)),
          prec(PRECEDENCE_PREFIX_MINUS, seq("-", $._expression)),
          prec(PRECEDENCE_PREFIX_PLUS, seq("+", $._expression)),
          prec(PRECEDENCE_PREFIX_PLUSPLUS, seq("++", $._expression)),
          prec(PRECEDENCE_PREFIX_MINUSMINUS, seq("--", $._expression)),
        ),

      postfix: ($) =>
        choice(
          prec(PRECEDENCE_AMP, seq($._expression, "&")),
          prec(PRECEDENCE_DOTDOT, seq($._expression, "..")),
          prec(PRECEDENCE_DOTDOTDOT, seq($._expression, "...")),
          prec(PRECEDENCE_SINGLEQUOTE, seq($._expression, "'")),
          prec(PRECEDENCE_POSTFIX_BANG, seq($._expression, "!")),
          prec(PRECEDENCE_POSTFIX_BANGBANG, seq($._expression, "!!")),
          prec(PRECEDENCE_POSTFIX_MINUSMINUS, seq($._expression, "--")),
          prec(PRECEDENCE_POSTFIX_PLUSPLUS, seq($._expression, "++")),
          prec(PRECEDENCE_FAKE_EQUALDOT, seq($._expression, "=.")),
        ),

      binary: ($) =>
        choice(
          prec.left(PRECEDENCE_EQUAL, seq($._expression, "=", $._expression)),
          prec.left(
            PRECEDENCE_COLONEQUAL,
            seq($._expression, ":=", $._expression),
          ),
          prec.left(
            PRECEDENCE_CARETEQUAL,
            seq($._expression, "^=", $._expression),
          ),
          prec.left(
            PRECEDENCE_CARETCOLONEQUAL,
            seq($._expression, "^:=", $._expression),
          ),
          prec.left(
            PRECEDENCE_BARMINUSGREATER,
            seq($._expression, "|->", $._expression),
          ),
          prec.right(
            PRECEDENCE_SLASHCOLON,
            seq($._expression, "/:", $._expression),
          ),
          prec.left(
            PRECEDENCE_SLASHSLASH,
            seq($._expression, "//", $._expression),
          ),
          prec.right(
            PRECEDENCE_SLASHSLASHEQUAL,
            seq($._expression, "//=", $._expression),
          ),
          prec.right(
            PRECEDENCE_PLUSEQUAL,
            seq($._expression, "+=", $._expression),
          ),
          prec.right(
            PRECEDENCE_MINUSEQUAL,
            seq($._expression, "-=", $._expression),
          ),
          prec.right(
            PRECEDENCE_STAREQUAL,
            seq($._expression, "*=", $._expression),
          ),
          prec.right(
            PRECEDENCE_SLASHEQUAL,
            seq($._expression, "/=", $._expression),
          ),
          prec.left(
            PRECEDENCE_SLASHDOT,
            seq($._expression, "/.", $._expression),
          ),
          prec.left(
            PRECEDENCE_SLASHSLASHDOT,
            seq($._expression, "//.", $._expression),
          ),
          prec.right(
            PRECEDENCE_MINUSGREATER,
            seq($._expression, "->", $._expression),
          ),
          prec.right(
            PRECEDENCE_COLONGREATER,
            seq($._expression, ":>", $._expression),
          ),
          prec.right(
            PRECEDENCE_LESSMINUSGREATER,
            seq($._expression, "<->", $._expression),
          ),
          prec.left(
            PRECEDENCE_SLASHSEMI,
            seq($._expression, "/;", $._expression),
          ),
          prec.left(PRECEDENCE_SLASH, seq($._expression, "/", $._expression)),
          prec.right(PRECEDENCE_CARET, seq($._expression, "^", $._expression)),
          prec.left(
            PRECEDENCE_SLASHAT,
            seq($._expression, "/@", $._expression),
          ),
          prec.right(PRECEDENCE_ATAT, seq($._expression, "@@", $._expression)),
          prec.left(
            PRECEDENCE_SLASHSLASHAT,
            seq($._expression, "//@", $._expression),
          ),
          prec.left(
            PRECEDENCE_ATATAT,
            seq($._expression, "@@@", $._expression),
          ),
          prec.right(PRECEDENCE_AT, seq($._expression, "@", $._expression)),
          prec.left(
            PRECEDENCE_INFIX_QUESTION,
            seq($._expression, "?", $._expression),
          ),
          prec.left(
            PRECEDENCE_FAKE_PATTERNCOLON,
            seq($._expression, ":", $._expression),
          ),
        ),

      infix: ($) =>
        choice(
          prec.left(PRECEDENCE_COMMA, seq($._expression, ",", $._expression)),
          prec.left(PRECEDENCE_SEMI, seq($._expression, ";", $._expression)),
          prec.left(
            PRECEDENCE_TILDETILDE,
            seq($._expression, "~~", $._expression),
          ),
          prec.left(PRECEDENCE_BAR, seq($._expression, "|", $._expression)),
          prec.left(PRECEDENCE_BARBAR, seq($._expression, "||", $._expression)),
          prec.left(PRECEDENCE_AMPAMP, seq($._expression, "&&", $._expression)),
          prec.left(
            PRECEDENCE_EQUALEQUALEQUAL,
            seq($._expression, "===", $._expression),
          ),
          prec.left(
            PRECEDENCE_EQUALBANGEQUAL,
            seq($._expression, "=!=", $._expression),
          ),
          prec.left(
            PRECEDENCE_CLASS_INEQUALITY,
            seq($._expression, "==", $._expression),
          ),
          prec.left(
            PRECEDENCE_CLASS_INEQUALITY,
            seq($._expression, "!=", $._expression),
          ),
          prec.left(
            PRECEDENCE_CLASS_INEQUALITY,
            seq($._expression, "<", $._expression),
          ),
          prec.left(
            PRECEDENCE_CLASS_INEQUALITY,
            seq($._expression, "<=", $._expression),
          ),
          prec.left(
            PRECEDENCE_CLASS_INEQUALITY,
            seq($._expression, ">", $._expression),
          ),
          prec.left(
            PRECEDENCE_CLASS_INEQUALITY,
            seq($._expression, ">=", $._expression),
          ),
          prec.left(
            PRECEDENCE_INFIX_PLUS,
            seq($._expression, "+", $._expression),
          ),
          prec.left(
            PRECEDENCE_INFIX_MINUS,
            seq($._expression, "-", $._expression),
          ),
          prec.left(PRECEDENCE_STAR, seq($._expression, "*", $._expression)),
          prec.left(PRECEDENCE_DOT, seq($._expression, ".", $._expression)),
          prec.left(
            PRECEDENCE_STARSTAR,
            seq($._expression, "**", $._expression),
          ),
          prec.left(
            PRECEDENCE_LESSGREATER,
            seq($._expression, "<>", $._expression),
          ),
          prec.left(
            PRECEDENCE_SLASHSTAR,
            seq($._expression, "/*", $._expression),
          ),
          prec.left(PRECEDENCE_ATSTAR, seq($._expression, "@*", $._expression)),
        ),

      call: ($) =>
        prec(
          PRECEDENCE_CALL,
          seq(
            field("head", $._expression),
            "[",
            optional(field("arguments", $._expression)),
            "]",
          ),
        ),

      part: ($) =>
        prec(
          PRECEDENCE_CALL,
          seq(
            field("head", $._expression),
            "[[",
            optional(field("arguments", $._expression)),
            "]]",
          ),
        ),

      span: ($) =>
        choice(
          prec.right(
            PRECEDENCE_PREFIX_MINUS - 1,
            seq($._expression, ";;", $._expression),
          ),
          prec.right(
            PRECEDENCE_PREFIX_MINUS - 1,
            seq($._expression, ";;"),
          ),
          prec.right(
            PRECEDENCE_CALL + 1,
            seq(";;", $._expression),
          ),
          prec.right(
            PRECEDENCE_CALL + 1,
            ";;",
          ),
        ),

      group: ($) =>
        choice(
          seq("{", optional($._expression), "}"),
          seq("(", optional($._expression), ")"),
          seq("[", optional($._expression), "]"),
          seq("<|", optional($._expression), "|>"),
        ),
    },
  })));
